--- a/client/src/index.html
+++ b/client/src/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="initial-scale=1, width=device-width" />
-		<title>Starter Kit</title>
+		<title>Tech Products Demo</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
