--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,7 @@
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
+		<script type="module" src="/src/main.jsx"></script>
 		<script
 			crossorigin
 			type="text/javascript"
